# GAMES

./: .gitignore  Dockerfile  docker-compose.yml
101/: .gitignore  Dockerfile  README.md  docker-compose.yml
101/0/: main.cpp
101/1/: CMakeLists.txt  README.md  clean.py  main.cpp  run.py
101/2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp  run.bat  run.py
101/3/: OBJ_Loader.h  Texture.hpp  clear.py  main.cpp  rasterizer.cpp  run.py
101/4/: CMakeLists.txt  main.cpp
101/5/: Object.hpp  Renderer.cpp  Sphere.hpp  Triangle.hpp  clean.py  run.py
101/6/: BVH.cpp  BVH.hpp  Bounds3.hpp  Scene.cpp  Triangle.hpp  Vector.hpp  convert_to_jpg.py  main.cpp
101/7/: BVH.cpp  Bounds3.hpp  Data.hpp  Material.hpp  MyThreadPool.cpp  MyThreadPool.hpp  MyThreadPool2.hpp  RandomFloat.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  clean.py  global.hpp  main.cpp  run.py
101/8/: clean.py  run.py
101/8/src/: application.cpp  mass.h  rope.cpp  rope.h  spring.h
101/TinyRasterizer/: VectorN.hpp  docker-compose.yml  main.cpp
LearnOpenGL/LearnOpenGL/: LearnOpenGL.sln  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters
LearnOpengl/: CMakeLists.txt  main.cpp  run.py
OpenGLTemplate/: OpenGLTemplate.sln  OpenGLTemplate.vcxproj  OpenGLTemplate.vcxproj.filters
TinyRasterizer/: Buffers.hpp  CMakeLists.txt  Dockerfile  Mesh.hpp  ObjLoader.hpp  PicConvert.hpp  PpmImage.hpp  TgaImage.hpp  TgaImage2.hpp  Transformation.hpp  Triangle.hpp  VectorN.hpp  clean.py  convert_to_jpg.py  docker-compose.yml  main.cpp  run.py
(+108 files in other folders)
